--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,66 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
+blas=1.0=mkl
+bokeh=1.4.0=py37_0
 ca-certificates=2019.11.27=0
 certifi=2019.11.28=py37_0
+click=7.0=py37_0
+cloudpickle=1.2.2=py_0
+cytoolz=0.10.1=py37h1de35cc_0
+dask=2.10.0=py_0
+dask-core=2.10.0=py_0
+distributed=2.10.0=py_0
+freetype=2.9.1=hb4e5f40_0
+fsspec=0.6.2=py_0
+heapdict=1.0.1=py_0
+intel-openmp=2019.4=233
+jinja2=2.10.3=py_0
+jpeg=9b=he5867d9_2
 libcxx=4.0.1=hcfea43d_1
 libcxxabi=4.0.1=hcfea43d_1
 libedit=3.1.20181209=hb402a30_0
 libffi=3.2.1=h475c297_4
+libgfortran=3.0.1=h93005f0_2
+libpng=1.6.37=ha441bb4_0
+libtiff=4.1.0=hcb84e12_0
+locket=0.2.0=py37_1
+markupsafe=1.1.1=py37h1de35cc_0
+mkl=2019.4=233
+mkl-service=2.3.0=py37hfbe908c_0
+mkl_fft=1.0.15=py37h5e564d8_0
+mkl_random=1.1.0=py37ha771720_0
+msgpack-python=0.6.1=py37h04f5b5a_1
 ncurses=6.1=h0a44026_1
 numpy=1.18.1=pypi_0
+numpy-base=1.18.1=py37h6575580_1
+olefile=0.46=py37_0
 openssl=1.1.1d=h1de35cc_3
+packaging=20.1=py_0
+pandas=0.25.3=py37h0a44026_0
+partd=1.1.0=py_0
+pillow=7.0.0=py37h4655f20_0
 pip=20.0.2=py37_0
+psutil=5.6.7=py37h1de35cc_0
+pyparsing=2.4.6=py_0
 python=3.7.6=h359304d_2
+python-dateutil=2.8.1=py_0
+pytz=2019.3=py_0
+pyyaml=5.2=py37h1de35cc_0
 readline=7.0=h1de35cc_5
+selenium=3.141.0=pypi_0
 setuptools=45.1.0=py37_0
+six=1.14.0=py37_0
+sortedcontainers=2.1.0=py37_0
 sqlite=3.30.1=ha441bb4_0
+tblib=1.6.0=py_0
 tk=8.6.8=ha441bb4_0
+toolz=0.10.0=py_0
+tornado=6.0.3=py37h1de35cc_0
+urllib3=1.25.8=pypi_0
 wheel=0.33.6=py37_0
 xz=5.2.4=h1de35cc_4
+yaml=0.1.7=hc338f04_2
+zict=1.0.0=py_0
 zlib=1.2.11=h1de35cc_3
+zstd=1.3.7=h5bba6e5_0
